Added tests and fixed all misunderstandings